test/scc/decl/semantic-errors/064.t
extern struct P array[10];